--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ PORT=3005
 # https://console.cloud.google.com/apis/credentials
 REACT_APP_GOOGLE_CLIENT_ID="361222498523-k30tc2octab8mtoahcbb899fqs5j53pa.apps.googleusercontent.com"
 
-# development server
+# development server фывфывф
 REACT_APP_SERVER_URL='http://localhost:3000/api'
