--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "antd": "^4.20.1",
         "antd-img-crop": "^4.2.3",
         "axios": "^0.27.2",
+        "cacache": "^16.1.1",
         "emoji-picker-react": "^3.5.1",
         "html-react-parser": "^1.4.14",
         "i18next": "^21.6.16",
